@@ -8,6 +8,11 @@
 	  Add _BitInt to type list in manual.
 	* src/SDCCglue.c:
 	  Skip invalid init list bits. Fix bug #2928.
+	* src/SDCCicode.c,
+	  support/regression/tests/bug-2983.c:
+	  Fix bug #2983.
+	* src/pdk/peeph.def:
+	  Fix an issue in two pdk peephole rule conditions.
 
 2023-01-25 Philipp Klaus Krause <pkk AT spth.de>
 
